@@ -6,16 +6,19 @@ import bio.terra.cda.app.util.SqlUtil;
 import bio.terra.cda.app.util.TableSchema;
 import bio.terra.cda.generated.model.Query;
 import com.google.cloud.Tuple;
+
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class SqlGenerator {
   final String qualifiedTable;
   final Query rootQuery;
+  final String version;
   final String table;
   final String fileTable;
   final String project;
@@ -30,6 +33,7 @@ public class SqlGenerator {
   public SqlGenerator(String qualifiedTable, Query rootQuery, String version) throws IOException {
     this.qualifiedTable = qualifiedTable;
     this.rootQuery = rootQuery;
+    this.version = version;
     int dotPos = qualifiedTable.lastIndexOf('.');
     this.project = dotPos == -1 ? "" : qualifiedTable.substring(0, dotPos);
     this.table = dotPos == -1 ? qualifiedTable : qualifiedTable.substring(dotPos + 1);
@@ -54,23 +58,23 @@ public class SqlGenerator {
   }
 
   public String generate() throws IllegalArgumentException {
-    return sql(qualifiedTable, rootQuery, false, false);
+    return sql(qualifiedTable, rootQuery, false, false, false);
   }
 
-  public String generateFiles() throws IllegalArgumentException {
-    return sql(qualifiedTable, rootQuery, false, true);
+  public String generateFiles(Boolean global) throws IllegalArgumentException {
+    return sql(qualifiedTable, rootQuery, false, true, global);
   }
 
-  protected String sql(String tableOrSubClause, Query query, Boolean subQuery, Boolean filesQuery)
+  protected String sql(String tableOrSubClause, Query query, Boolean subQuery, Boolean filesQuery, Boolean globalQuery)
       throws IllegalArgumentException {
-    var resultsQuery = resultsQuery(query, tableOrSubClause, subQuery, filesQuery);
+    var resultsQuery = resultsQuery(query, tableOrSubClause, subQuery, filesQuery, globalQuery);
     var resultsAlias = "results";
     return String.format(
         "SELECT %1$s.* EXCEPT(rn) FROM (%2$s) as %1$s WHERE rn = 1", resultsAlias, resultsQuery);
   }
 
   protected String resultsQuery(
-      Query query, String tableOrSubClause, Boolean subQuery, Boolean filesQuery) {
+      Query query, String tableOrSubClause, Boolean subQuery, Boolean filesQuery, Boolean globalQuery) {
     if (query.getNodeType() == Query.NodeTypeEnum.SUBQUERY) {
       // A SUBQUERY is built differently from other queries. The FROM clause is the
       // SQL version of
@@ -78,30 +82,36 @@ public class SqlGenerator {
       // level query.
       return resultsQuery(
           query.getL(),
-          String.format("(%s)", sql(tableOrSubClause, query.getR(), true, filesQuery)),
+          String.format("(%s)", sql(tableOrSubClause, query.getR(), true, filesQuery, globalQuery)),
           subQuery,
-          filesQuery);
+          filesQuery,
+          globalQuery);
     }
 
     String[] parts = entitySchema != null ? entitySchema.x().split("\\.") : new String[0];
     String prefix = entitySchema != null ? SqlUtil.getAlias(parts.length - 1, parts) : table;
 
+    QueryContext ctx =
+            new QueryContext(
+                    tableSchemaMap, tableOrSubClause, table, project, fileTable, fileTableSchemaMap);
+    ctx.setEntityPath(entitySchema != null ? entitySchema.x() : "")
+            .setFilesQuery(filesQuery)
+            .setIncludeSelect(!subQuery);
+
     Stream<String> entityUnnests =
-        entitySchema != null ? SqlUtil.getUnnestsFromParts(table, parts, true) : Stream.empty();
+        entitySchema != null
+                ? SqlUtil.getUnnestsFromParts(ctx, table, parts, true, SqlUtil.JoinType.INNER)
+                : Stream.empty();
 
     String[] filesParts =
         Stream.concat(Arrays.stream(parts), Stream.of("Files")).toArray(String[]::new);
     String filesAlias = SqlUtil.getAlias(filesParts.length - 1, filesParts);
 
     Stream<String> filesUnnests =
-        filesQuery ? SqlUtil.getUnnestsFromParts(table, filesParts, true) : Stream.empty();
+        filesQuery
+                ? SqlUtil.getUnnestsFromParts(ctx, table, filesParts, true, SqlUtil.JoinType.INNER)
+                : Stream.empty();
 
-    QueryContext ctx =
-        new QueryContext(
-            tableSchemaMap, tableOrSubClause, table, project, fileTable, fileTableSchemaMap);
-    ctx.setEntityPath(entitySchema != null ? entitySchema.x() : "")
-        .setFilesQuery(filesQuery)
-        .setIncludeSelect(!subQuery);
     String condition = ((BasicOperator) query).buildQuery(ctx);
 
     var fromClause =
@@ -119,20 +129,20 @@ public class SqlGenerator {
               fromClause,
               Stream.of(
                   String.format(
-                      " LEFT JOIN %1$s AS %2$s ON %2$s.id = %3$s",
+                      " %1$s %2$s AS %3$s ON %3$s.id = %4$s",
+                      SqlUtil.JoinType.INNER.value,
                       String.format("%s.%s", this.project, this.fileTable),
                       this.fileTable,
                       filesAlias)));
     }
 
-    var fromString = fromClause.distinct().collect(Collectors.joining(" "));
+    String fromString = fromClause.distinct().collect(Collectors.joining(" "));
+    Supplier<Stream<String>> selectFields = () -> getSelect(ctx, prefix, !this.modularEntity, globalQuery);
 
     return String.format(
         "SELECT ROW_NUMBER() OVER (PARTITION BY %1$s) as rn, %2$s FROM %3$s WHERE %4$s",
-        filesQuery
-            ? String.format("%s.id", this.fileTable)
-            : getPartitionByFields(ctx, ctx.getFilesQuery() ? fileTable : prefix),
-        subQuery ? String.format("%s.*", table) : getSelect(ctx, prefix, !this.modularEntity),
+        getPartitionByFields(ctx, ctx.getFilesQuery() ? fileTable : prefix).collect(Collectors.joining(", ")),
+        subQuery ? String.format("%s.*", table) : selectFields.get().collect(Collectors.joining(", ")),
         fromString,
         condition);
   }
@@ -141,34 +151,47 @@ public class SqlGenerator {
     return tableOrSubClause + " AS " + table;
   }
 
-  protected String getPartitionByFields(QueryContext ctx, String alias) {
+  protected Stream<String> getPartitionByFields(QueryContext ctx, String alias) {
     return Stream.concat(Stream.of(String.format("%s.id", alias)), ctx.getPartitions().stream())
-        .distinct()
-        .collect(Collectors.joining(", "));
+        .distinct();
   }
 
-  protected String getSelect(QueryContext ctx, String table, Boolean skipExcludes) {
+  protected Stream<String> getSelect(QueryContext ctx, String table, Boolean skipExcludes, Boolean globalQuery) {
     if (ctx.getSelect().size() > 0) {
-      return String.join(",", ctx.getSelect());
+      return ctx.getSelect().stream();
     } else {
-      return String.join(
-          ", ", getSelectsFromEntity(ctx, ctx.getFilesQuery() ? fileTable : table, skipExcludes));
+      return getSelectsFromEntity(ctx, ctx.getFilesQuery() ? fileTable : table, skipExcludes, globalQuery);
     }
   }
 
-  protected List<String> getSelectsFromEntity(
-      QueryContext ctx, String prefix, Boolean skipExcludes) {
-    return (ctx.getFilesQuery()
-            ? fileTableSchema
-            : entitySchema != null ? Arrays.asList(entitySchema.y().getFields()) : tableSchema)
-        .stream()
+  protected Stream<String> getSelectsFromEntity(
+      QueryContext ctx, String prefix, Boolean skipExcludes, Boolean globalQuery) {
+    ctx.addAlias("subject_id", String.format("%s.id", table));
+    return Stream.concat(
+            (ctx.getFilesQuery()
+              ? fileTableSchema
+              : entitySchema != null
+                    ? List.of(entitySchema.y().getFields())
+                    : tableSchema)
+            .stream()
             .filter(
                 definition ->
                     !(ctx.getFilesQuery()
                             && List.of("ResearchSubject", "Subject", "Specimen")
                                 .contains(definition.getName()))
                         && (skipExcludes || !filteredFields.contains(definition.getName())))
-            .map(definition -> String.format("%1$s.%2$s AS %2$s", prefix, definition.getName()))
-            .collect(Collectors.toList());
+            .map(definition -> {
+              ctx.addAlias(definition.getName(),
+                      String.format("%s%s",
+                              List.of(table, fileTable).contains(prefix)
+                                      ? String.format("%s.", prefix)
+                                      : String.format("%s.", SqlUtil.getAntiAlias(prefix)), definition.getName()));
+              return String.format("%1$s.%2$s AS %2$s", prefix, definition.getName());
+            }),
+            entitySchema != null && !globalQuery
+              ? Stream.concat(
+                    Stream.of(String.format("%s.id AS subject_id", table)),
+                    SqlUtil.getIdSelectsFromPath(ctx, entitySchema.x(), ctx.getFilesQuery()))
+              : Stream.of());
   }
 }
